WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278013
Web content process may hang under immediate action hit testing if PDF plugin has large active selection
https://bugs.webkit.org/show_bug.cgi?id=278013
Summary
Web content process may hang under immediate action hit testing if PDF plugin...
Abrar Rahman Protyasha
Reported
2024-08-13 01:51:37 PDT
rdar://125375518
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-08-13 02:41:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32106
EWS
Comment 2
2024-08-13 17:52:51 PDT
Committed
282212@main
(deca3c2ef868): <
https://commits.webkit.org/282212@main
> Reviewed commits have been landed. Closing PR #32106 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug