Web content process may hang under immediate action hit testing if PDF plugin has large active selection https://bugs.webkit.org/show_bug.cgi?id=278013 rdar://125375518

Reviewed by Tim Horton.

When there is a large active selection, for example when a user presses
⌘-A to select all, the web content process hangs in NSAttributedString
operations under PDFPluginBase::dictionaryPopupInfoForSelection().

To address these hangs, we can set an upper bound on the length of the
backing selection string, throwing away the remainder. This is okay to
do because a larger context would not help with the Reveal item created
downstream in WebCore::showPopupOrCreateAnimationController().

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::dictionaryPopupInfoForSelection):

Canonical link: https://commits.webkit.org/282212@main